--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,25 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.gradle/**
+build/*
+.idea/*
+.gradle/8.5/checksums/checksums.lock
+.gradle/8.5/checksums/sha1-checksums.bin
+.gradle/8.5/executionHistory/executionHistory.bin
+.gradle/8.5/executionHistory/executionHistory.lock
+.gradle/8.5/fileHashes/fileHashes.bin
+.gradle/8.5/fileHashes/fileHashes.lock
+.gradle/8.5/fileHashes/resourceHashesCache.bin
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
+.gradle/buildOutputCleanup/outputFiles.bin
+.gradle/file-system.probe
+.idea/misc.xml
+.idea/modules/spring-mybatis.main.iml
+.idea/vcs.xml
+build/resources/main/application.yml
+build/resources/main/mybatis-config.xml
+build/tmp/compileJava/compileTransaction/stash-dir/StudentController.class.uniqueId0
+build/tmp/compileJava/compileTransaction/stash-dir/StudentService.class.uniqueId1
+build/tmp/compileJava/previous-compilation-data.bin
+.DS_Store
